--- a/src/pages/Desktop/List/List.module.css
+++ b/src/pages/Desktop/List/List.module.css
@@ -211,3 +211,19 @@
   width: 44px;
   height: 44px;
 }
+
+.NessunRisultato {
+  color: var(--primary);
+  text-align: center;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
